--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  google_fonts: ^3.0.1
+  flutter_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
